--- a/media/css/style.css
+++ b/media/css/style.css
@@ -2278,7 +2278,7 @@ margin-left: 5px;
 #resource-print-icon span {
 display:inline-block;
 padding-left:25px;
-width:162px;
+width:165px;
 }
 
 .customSelectContainer {
@@ -2507,6 +2507,7 @@ margin: 0 0 30px 17px !important;
 #tag-conferences .conference-series {
 background-color: #DFDFDF;
 padding: 10px;
+margin-top: 15px;
 -moz-border-radius: 10px;
 -webkit-border-radius: 10px;   
 }
